--- a/templates/configuracoes.html
+++ b/templates/configuracoes.html
@@ -3,7 +3,7 @@
 {% block title %}Configurações de Custo{% endblock %}
 
 {% block content %}
-    <h2 class="mb-4">Configurações de Custo</h2>
+    <h2 class="mb-4">Cadastro de Custos</h2>
 
     <div class="alert alert-primary text-center" role="alert">
         <h4 class="alert-heading">Seu Custo de Hora de Trabalho é:</h4>
