--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="{{ url_for('gerenciar_fichas_tecnicas') }}">Fichas Técnicas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('gerenciar_configuracoes') }}">Configurações</a>
+                        <a class="nav-link" href="{{ url_for('gerenciar_configuracoes') }}">Custos</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('gerenciar_vendas') }}">Vendas</a></li>
                     <li class="nav-item">
@@ -93,7 +93,7 @@
 
     <footer class="text-center text-muted py-4 mt-auto">
         <div class="container">
-            <p>&copy; 2024-2025 - Sistema de Controle para Confeitando com Artes feito por Sabrina Caldas </p>
+            <p>&copy;2025 - Sistema de Controle para Confeitando com Artes feito por Sabrina Caldas &copy; </p>
         </div>
     </footer>
     
